Enhance PF and HF layers with new functionalities and optimizations
- Added global variable USE_MRU to toggle between LRU and MRU page replacement strategies.
- Introduced new functions for buffer management: PFbufUsed to check buffer usage.
- Updated HF_FreeListAdd and HF_FreeListRemove functions for improved efficiency and clarity.
- Implemented detailed statistics tracking for physical and logical reads/writes, page fixes/unfixes, and allocations/evictions.
- Created new test files and datasets for comprehensive testing of the HF layer.
- Developed test cases for mixed read/write operations and index creation from existing HF files.
- Added utility functions for statistics management and output to files.
- Removed obsolete test files and streamlined makefile for better build management.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "*.dbclient-js": "javascript",
         "stdio.h": "c",
         "pftypes.h": "c",
-        "pf.h": "c"
+        "pf.h": "c",
+        "utils.h": "c",
+        "types.h": "c"
     }
 }
