Implement Heap File (HF) Layer with CRUD operations and scanning functionality
- Added hf.h: Public API for the Heap File layer, including record identifier (HF_RID) and scan handle (HF_Scan) structures.
- Implemented file operations: HF_CreateFile, HF_DestroyFile, HF_OpenFile, HF_CloseFile.
- Implemented record operations: HF_InsertRecord, HF_GetRecord, HF_UpdateRecord, HF_DeleteRecord.
- Implemented scanning operations: HF_ScanOpen, HF_ScanNext, HF_ScanClose.
- Created hf_test.c: Test suite for validating the functionality of the HF layer, including record insertion, retrieval, update, deletion, and scanning.
- Added makefile for building the HF layer and test executable.
- Introduced pf.h and pftypes.h: Definitions for the page file layer, including error codes and data structures.
- Removed obsolete pageOperation.c and spLayer references, consolidating the project structure.
- Updated test files and statistics to reflect changes in the HF layer.

--- a/tests/makefile
+++ b/tests/makefile
@@ -1,10 +1,10 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -O2 -D_POSIX_C_SOURCE=200809L
-INCLUDES = -I../pflayer -I../spLayer -I../amlayer -Itests
+INCLUDES = -I../pflayer -I../hfLayer -I../amlayer -Itests
 
 # Common object sets
-PFOBJS = ../pflayer/pf.o ../pflayer/buf.o ../pflayer/pageOperation.o ../pflayer/hash.o
-HF_OBJS = ../spLayer/hf.o
+PFOBJS = ../pflayer/pf.o ../pflayer/buf.o ../pflayer/hash.o
+HF_OBJS = ../hfLayer/hf.o
 AM_OBJS = ../amlayer/am.o ../amlayer/amfns.o ../amlayer/amsearch.o ../amlayer/aminsert.o \
           ../amlayer/amstack.o ../amlayer/amglobals.o ../amlayer/amscan.o ../amlayer/amprint.o ../amlayer/misc.o
 
@@ -19,9 +19,12 @@ test1: test_pf_rw_mix.c $(HF_OBJS) $(PFOBJS)
 test2: test2.c $(HF_OBJS) $(PFOBJS)
 	$(CC) $(CFLAGS) $(INCLUDES) -o $@ $^
 
+test_pf_rw_mix: test_pf_rw_mix.o $(HF_OBJS) $(PFOBJS) $(AM_OBJS)
+	$(CC) $(CFLAGS) $(INCLUDES) -o $@ $^
+
 # Pattern rules for .o
 %.o: %.c
 	$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
 
 clean:
-	rm -f test1 test_pf_rw_mix *.o ../pflayer/*.o ../spLayer/*.o ../amlayer/*.o courses.hf courses_test.hf 
+	rm -f test1 test_pf_rw_mix *.o ../pflayer/*.o ../hfLayer/*.o ../amlayer/*.o courses.hf courses_test.hf 
