Enhance code readability: update comments in hf.c, hf_layer_test.c, and makefile; add am.h association in settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "pftypes.h": "c",
         "pf.h": "c",
         "utils.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "am.h": "c"
     }
 }
